           - * Affected Files:
           - * application/controllers/go_user_ce.php
           - * application/views/go_user/go_user_main_ce.php
           - * js/go_user/go_user_ce.js
           - * js/go_user/go_user_panel1_ce.js

1394856000 - Fixed an issue when adding new carrier and leaving Server IP checked. It doesn't save the server's IP on the carrier's db. -- Chris Lomuntad <chris@goautodial.com>
           - * Affected File:
           - * application/views/go_settings/go_carrier_wizard.php

           - Changed the first 4 digits of the username used when applying for a sippy account. -- Chris Lomuntad <chris@goautodial.com>
           - * Affected File:
           - * application/controllers/go_carriers_ce.php

           - Added a query upon logging in to see if the username exist on go_login_type. If not, it will insert a new data. -- Chris Lomuntad <chris@goautodial.com>
           - * Affected File:
           - * application/controllers/go_login.php


1394596800 - Fixed the adding of new phone extension using phone wizard and user wizard. -- Chris Lomuntad <chris@goautodial.com>
           - * Affected Files:
           - * application/controllers/go_user_ce.php
           - * application/views/go_settings/go_phone_wizard.php

           - Fixed an issue where when you uncheck the Cluster Status on the user group settings, the widget still shows up. -- Chris Lomuntad <chris@goautodial.com>
           - * Affected Files:
           - * application/views/go_dashboard.php

1394510400 - Fixed a bug on limesurvey when modifying a script. (Issue #1131) -- Chris Lomuntad <chris@goautodial.com>
           - * Affected Files:
           - * application/models/go_script.php

1394168400 - Added a list archiver when setting the list id INACTIVE and putting it back when set to ACTIVE. -- Chris Lomuntad <chris@goautodial.com>
           - * Affected Files:
           - * application/models/golist.php
           - * application/views/go_list/go_list.php